--- a/buzzer_admin.html
+++ b/buzzer_admin.html
@@ -76,7 +76,7 @@
             socket.on('update ranking', function (msg) {
                 $("#ranking").text("");
                 $(msg).each(function (index, item) {
-                    $("#ranking").append("<tr id='" + item.SocketID + "'><td>" + (index + 1) + "</td><td>" + item.Color + "</td><td>" + item.Name + "</td><td>" + item.Points + " Pkt.</td></tr>");
+                    $("#ranking").append("<tr id='" + item.SocketID + "'><td>" + (index + 1) + ".</td><td style='width:10px' class='align-middle'><div style='background-color:" + item.Color + ";width: 10px; height: 10px;'></div></td><td>" + item.Name + "</td><td>" + item.Points + " Pkt.</td></tr>");
                 })
             });
         });
@@ -91,8 +91,8 @@
         }
     </style>
 </head>
-<body style="background-color:lightgray">
-    <div class="container" style="border:solid 1px black">
+<body>
+    <div class="container">
         <div class="row d-flex justify-content-center">
             <p class="h1">Guerilla Gaming Buzzer</p>
         </div>
@@ -100,7 +100,7 @@
         <br />
         <br />
         <div class="row d-flex justify-content-center">
-            <div id="question_field" class="col-md-5" style="border: solid 1px black; height:100px">
+            <div id="question_field" class="col-md-5" style="border: solid 1px #cfcfcf; height:100px;border-radius: 7px;">
                 <p id="question"></p>
             </div>
         </div>
@@ -110,43 +110,43 @@
         </div>
         <br />
         <div class="row d-flex justify-content-center">
-            <input type="button" id="btn_clear_question" value="Frage löschen" class="btn btn-danger" />
-            <input type="button" id="btn_send_question" value="Frage senden" class="btn btn-success" />
+            <input type="button" id="btn_send_question" value="Frage senden" class="btn btn-success" style="margin-right:15px" />
+            <input type="button" id="btn_clear_question" value="Frage l&ouml;schen" class="btn btn-danger" />
         </div>
+        <br />
+        <br />
         <div class="row d-flex justify-content-center">
-            <table class="table">
+           <input type="button" class="btn" value="" id="buzzer" style="width: 100px; height: 50px;" />
+        </div>
+        <br />
+        <br />
+        <div class="row d-flex justify-content-center">
+            <table class="table col-sm-3">
                 <thead></thead>
                 <tbody id="ranking"></tbody>
             </table>
         </div>
         <div class="row d-flex justify-content-center">
             <div class="form-group row" id="points_area" style="display:none">
-                <label for="inputEmail3" class="col-sm-2 col-form-label">Punkte vergeben:</label>
-                <div class="col-sm-10">
-                    <input type="number" id="input_points" value="10" class="form-control" />
+                <label for="inputEmail3" class="col-form-label" style="float:left; margin-right:15px">Punkte vergeben:</label>
+                <div style="float:left; margin-right:15px">
+                    <input type="number" id="input_points" value="10" class="form-control" style="width: 70px;" />
                 </div>
                 <input type="button" class="btn btn-success" value="Add" id="btn_add_points" />
             </div>
         </div>
-        <div class="row d-flex justify-content-center">
-            <input type="button" class="btn" value="" id="buzzer" style="width: 100px; height: 50px;" />
-        </div>
-        <div class="row d-flex justify-content-center">
-            <input id="btn_options" type="button" class="btn btn-primary" value="Optionen" />
-            <div id="option_area" style="display:none">
+        <hr />
+        <div class="row">
+            <div  style="margin-left:15px">
+                <input id="btn_options" type="button" class="btn btn-primary" value="Optionen" />
+                <input type="button" class="btn btn-danger" value="Neus Spiel" id="btn_new_game" />
+            </div>
+            <div id="option_area" style="display:none; margin-left:15px">
                 <div class="custom-control custom-checkbox">
                     <input type="checkbox" class="custom-control-input" id="success_sound" checked="checked">
                     <label class="custom-control-label" for="success_sound">Sound beim erfolgreichem Buzzer abspielen.</label>
                 </div>
             </div>
-        </div>
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <div class="row d-flex justify-content-center">
-            <input type="button" class="btn btn-danger" value="Neus Spiel" id="btn_new_game" />
         </div>
     </div>
 </body>
