--- a/buzzer.html
+++ b/buzzer.html
@@ -30,8 +30,8 @@
                     $("#input_success_sound").append("<option value='" + item + "'>" + item + "</option>");
                     $("#input_failed_sound").append("<option value='" + item + "'>" + item + "</option>");
 
-                    $('#input_success_sound option[value="Player_Change_4.mp3"]').prop('selected', true)
-                    $('#input_failed_sound option[value="Negative_Dongs_5.mp3"]').prop('selected', true)
+                    $('#input_success_sound option[value="RDM_Player_Change_4.mp3"]').prop('selected', true)
+                    $('#input_failed_sound option[value="RDM_Negative_Dongs_5.mp3"]').prop('selected', true)
                 })
             });
 
