--- a/buzzer_admin.html
+++ b/buzzer_admin.html
@@ -14,6 +14,7 @@
         var currentPlayer = {};
 
         $(function () {
+            $("#show_modal").click();
             var socket = io();
             socket.on('load buzzer', function (msg) {
                 if (JSON.stringify(msg) != JSON.stringify(new Object())) {
@@ -36,6 +37,8 @@
                             alert("Code nicht vorhanden oder Passwort falsch.");
                         }
                     });
+                } else {
+                    alert("Bitte fülle alle Felder aus.");
                 }
             });
             $('#btn_create').click(function () {
@@ -43,11 +46,14 @@
                     socket.emit('admin create', $("#input_code").val() + ";" + $("#input_pass").val());
                     socket.on('admin create', function (data) {
                         if (data) {
+                            socket.emit('ini buzzer', "");
                             $('#exampleModalCenter').modal('hide');
                         } else {
                             alert("Code schon vorhanden.");
                         }
                     });
+                } else {
+                    alert("Bitte fülle alle Felder aus.");
                 }
             });
             $('#buzzer').click(function () {
@@ -193,7 +199,7 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="inputEmail3" class="col-sm-2 col-form-label">Code:</label>
+                        <label for="inputEmail3" class="col-sm-2 col-form-label">Passwort:</label>
                         <div class="col-sm-10">
                             <input type="text" id="input_pass" value="" class="form-control" placeholder="Passwort" />
                         </div>
